fixed showing phone display on desktop bug

--- a/Volleyball-How-to/pagescreen.scss
+++ b/Volleyball-How-to/pagescreen.scss
@@ -272,13 +272,27 @@ header {
   }
   
 
-  .hitting .crop {
+  .hitting .crop, .hitting .work {
+     display: none;
+  }
+  .setting .crop, .setting .work {
+     display: none;
+  }
+  .passing .crop, .passing .work {
      display: none;
   }
 
-
   @media screen and (max-width:1100px) {
-  	.passing .picture .info {
+  	.hitting .crop, .hitting .work {
+     display: none;
+  }
+  .setting .crop, .setting .work {
+     display: none;
+  }
+  .passing .crop, .passing .work {
+     display: none;
+  }
+    .passing .picture .info {
   		right:20%;
   		width:20%;
   	}
@@ -293,9 +307,13 @@ header {
 	}
 
   }
-
+  .crop, .work {
+    display: none;
+  }
   @media screen and (max-width:900px) {
-  	
+    .crop, .work {
+    display: none;
+  }	
     .passing {
       .picture .info {
         right:15%;
@@ -338,6 +356,9 @@ header {
   }
 
   @media screen and (max-width:750px) {
+    .crop, .work {
+    display: none;
+  }
   	 section.picture {
 		    width:80%;
   	 }
@@ -396,6 +417,9 @@ header {
   }
 
   @media screen and (max-width:550px) {
+    .crop, .work {
+    display: none;
+  }
     header {
       position:static;
       height:auto;
@@ -438,6 +462,9 @@ header {
   }
 
   @media screen and (max-width:420px) {
+    .crop, .work {
+    display: inherit;
+  }
   	header {
       position:static;
       height:auto;
