--- a/Volleyball-How-to/pagescreen.css
+++ b/Volleyball-How-to/pagescreen.css
@@ -338,11 +338,31 @@ section.picture {
   opacity: 0.5;
 }
 
-.hitting .crop {
+.hitting .crop, .hitting .work {
+  display: none;
+}
+
+.setting .crop, .setting .work {
+  display: none;
+}
+
+.passing .crop, .passing .work {
   display: none;
 }
 
 @media screen and (max-width: 1100px) {
+  .hitting .crop, .hitting .work {
+    display: none;
+  }
+
+  .setting .crop, .setting .work {
+    display: none;
+  }
+
+  .passing .crop, .passing .work {
+    display: none;
+  }
+
   .passing .picture .info {
     right: 20%;
     width: 20%;
@@ -360,7 +380,15 @@ section.picture {
     left: 20%;
   }
 }
+.crop, .work {
+  display: none;
+}
+
 @media screen and (max-width: 900px) {
+  .crop, .work {
+    display: none;
+  }
+
   .passing .picture .info {
     right: 15%;
     width: 25%;
@@ -404,6 +432,10 @@ section.picture {
   }
 }
 @media screen and (max-width: 750px) {
+  .crop, .work {
+    display: none;
+  }
+
   section.picture {
     width: 80%;
   }
@@ -457,6 +489,10 @@ section.picture {
   }
 }
 @media screen and (max-width: 550px) {
+  .crop, .work {
+    display: none;
+  }
+
   header {
     position: static;
     height: auto;
@@ -499,6 +535,10 @@ section.picture {
   }
 }
 @media screen and (max-width: 420px) {
+  .crop, .work {
+    display: inherit;
+  }
+
   header {
     position: static;
     height: auto;
