--- a/Volleyball-How-to/pagescreen.css
+++ b/Volleyball-How-to/pagescreen.css
@@ -536,7 +536,7 @@ section.picture {
 }
 @media screen and (max-width: 420px) {
   .crop, .work {
-    display: inherit;
+    display: inherit !important;
   }
 
   header {
@@ -572,5 +572,17 @@ section.picture {
 
   p {
     padding-bottom: 45px;
+  }
+
+  .hitting .work {
+    display: block;
+  }
+
+  .setting .crop, .setting .work {
+    display: inherit;
+  }
+
+  .passing .crop, .passing .work {
+    display: inherit;
   }
 }
