--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -20,6 +20,12 @@ h1 {
   font-weight: bold;
   margin-bottom: .8em;
 }
-ul {
-  padding: 5px 0 0 10px;
+ul.happy {
+  list-style: square;
+  padding: 5px 0 0 5px;
+  margin-left: 20px;
+}
+li {
+
+  padding-top: 5px;
 }
