--- a/Volleyball-Club/scss/screen.scss
+++ b/Volleyball-Club/scss/screen.scss
@@ -1,12 +1,5 @@
 @import "reset";
 
-.wrap {
-  margin: 0 auto;
-  max-width: 1000px;
-  padding: 0 20px;
-  background: white;
-}
-
 body {
   font-family: Helvetica;
   font-size: 16px;
@@ -24,27 +17,103 @@ p {
 h1 {
   font-size: 24px;
   font-weight: bold;
-  margin-bottom: .8em;
 }
-
-.content {
-  padding: 20px 0;
+body, html {
+  width: 100%;
+  height: 100%;
+}
+.wrap {
+  margin: 0 auto;
+  max-width: 1000px;
+}
+.header {
+  padding-top: 30px;
+  height: 70px;
+  width: 100%;
+  position: static;
+  /*background: blue;*/
+  h1 {
+    padding-left:2px;
+    margin: 0;
+    font-size: 45px;
+  }
+  img {
+    display: inline-block;
+    position: absolute;
+    right:0px;
+    top:0;
+    height: 180px;
+    width:180px;
+  }
+}
+div.nav {
+  font-size: 18px;
+  margin-top: 20px;
+  margin-bottom: 25px;
+}
+div.title {
+  margin-bottom:45px;
+  h2 {
+    font-size: 35px;
+    text-align: center;
+  }
+}
+.acircle {
+  background: red;
+  border-radius: 100%;
+  height: 120px;
+  width: 120px;
+  position: absolute;
+  display: inline-block;
+}
+div.circles {
+  position: relative;
+  height: 450px;
+  vertical-align: top;
+/*  background: lightblue;*/
+  display: inline-block;
+}
+@mixin pleft($top, $left) {
+  top:$top;
+  left:$left;
+}
+@mixin pright($top, $right) {
+  top:$top;
+  right:$right;
+}
+.basics {
+  @include pleft(2%, 12%);
+}
+.hitting {
+  @include pright(22%, 12%);
+}
+.setting {
+  @include pleft(40%, 12%);
+}
+.blocking {
+  @include pright(62%, 12%);
+}
+.passing {
+  @include pleft(80%, 12%);
+}
+body {
   font-size: 0;
 }
-
-.main, .side {
-  display: inline-block;
+div.right-boxes {
   vertical-align: top;
+  display: inline-block;
+  /*background: red;*/
+  height:450px;
 }
-
-.main {
-  width: 65%;
-  margin-right: 5%;
-  font-size: 16px;
+.sign-up {
+  margin-left: 35%;
+  display: inline-block;
+  button {
+    height: 70px;
+    width: 150px;
+    font-size: 20px;
+  }
 }
+.slideshow {
 
-.side {
-  width: 30%;
-  color: #666;
-  font-size: 14px;
 }
