--- a/Volleyball-Club/scss/screen.scss
+++ b/Volleyball-Club/scss/screen.scss
@@ -22,6 +22,12 @@ body, html {
   width: 100%;
   height: 100%;
 }
+body {
+  /*background-image: url(/red-and-white-abstract-wallpaper.jpg);*/
+  background-position: center center;
+  height: 100%;
+  width:100%;
+}
 .wrap {
   margin: 0 auto;
   max-width: 1000px;
@@ -58,6 +64,14 @@ div.title {
     text-align: center;
   }
 }
+div.links {
+  margin-top: 15px; 
+  margin-bottom:40px;
+  h3 {
+    font-size: 35px;
+    text-align: center;
+  }
+}
 .acircle {
   background: red;
   border-radius: 100%;
@@ -65,12 +79,15 @@ div.title {
   width: 120px;
   position: absolute;
   display: inline-block;
+  a {
+    font-size: 20px;
+  }
 }
 div.circles {
   position: relative;
   height: 450px;
   vertical-align: top;
-/*  background: lightblue;*/
+  background: lightblue;
   display: inline-block;
 }
 @mixin pleft($top, $left) {
@@ -102,7 +119,7 @@ body {
 div.right-boxes {
   vertical-align: top;
   display: inline-block;
-  /*background: red;*/
+  background: red;
   height:450px;
 }
 .sign-up {
