--- a/Volleyball-Club/css/screen.css
+++ b/Volleyball-Club/css/screen.css
@@ -151,7 +151,7 @@ div.circles {
   position: relative;
   height: 450px;
   vertical-align: top;
-  background: lightblue;
+  /*background: lightblue;*/
   display: inline-block;
 }
 
@@ -187,7 +187,7 @@ body {
 div.right-boxes {
   vertical-align: top;
   display: inline-block;
-  background: red;
+  /*background: red;*/
   height: 450px;
 }
 
