--- a/Volleyball-Club/scss/screen.scss
+++ b/Volleyball-Club/scss/screen.scss
@@ -81,6 +81,12 @@ div.links {
   display: inline-block;
   a {
     font-size: 20px;
+    text-align: center;
+    margin-left: 30px;
+    position: absolute;
+    top:40px;
+    color: white;
+    text-decoration: none;
   }
 }
 div.circles {
@@ -133,4 +139,11 @@ div.right-boxes {
 }
 .slideshow {
 
+}
+
+.whenhovercircle {
+  acircle {
+    height: 130px;
+    width: 130px;
+  }
 }
