--- a/Volleyball-Club/css/screen.css
+++ b/Volleyball-Club/css/screen.css
@@ -207,6 +207,10 @@ div.right-boxes {
   font-size: 20px;
 }
 
+form {
+  font-size: initial;
+}
+
 .whenhovercircle acircle {
   height: 130px;
   width: 130px;
