--- a/Volleyball-Club/scss/screen.scss
+++ b/Volleyball-Club/scss/screen.scss
@@ -22,8 +22,12 @@ body, html {
   width: 100%;
   height: 100%;
 }
+h4 {
+  font-size: 20px;
+}
 body {
   /*background-image: url(/red-and-white-abstract-wallpaper.jpg);*/
+  /*this is so freaking stupid!!!*/
   background-position: center center;
   height: 100%;
   width:100%;
@@ -73,7 +77,27 @@ div.links {
   }
 }
 .acircle {
-  background: red;
+      width: 200px;
+      height: 200px;
+      position: relative;
+      
+      background-image: -moz-radial-gradient(45px 45px 45deg, circle cover, lighten(red, 10%) 0%, red 100%, red 5%);
+      background-image: -webkit-radial-gradient(45px 45px, circle cover, lighten(red, 10%), red);
+      background-image: radial-gradient(45px 45px 45deg, circle cover, lighten(red, 10%) 0%, red 100%, red 5%);
+      
+      border: 1px solid green;
+      -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
+    }
+    
+    .acircle:hover {
+      background-image: -moz-radial-gradient(45px 45px 45deg, circle cover, red 0%, lighten(red, 10%) 100%, red 95%);
+      background-image: -webkit-radial-gradient(45px 45px, circle cover, lighten(red, 20%), red);
+      background-image: radial-gradient(45px 45px 45deg, circle cover, red 0%, lighten(red, 10%) 100%, red 95%);
+    }
+    
+.acircle {
+  /*background: red;*/
   border-radius: 100%;
   height: 120px;
   width: 120px;
@@ -139,7 +163,14 @@ div.right-boxes {
 }
 .slideshow {
 
+} 
+.roster {
+  h4 {
+    font-size: 20px;
+  }
 }
+
+
 form.pure-form {
   font-size: initial;
   margin-left: 50px;
@@ -161,4 +192,3 @@ form.pure-form {
   }
 }
 
-}
