prom picture integration

--- a/Alison/css/screen.css
+++ b/Alison/css/screen.css
@@ -77,6 +77,7 @@ div.title {
   padding-left: 60px;
   text-align: center;
   margin-top: 20px;
+  font-size: 50px;
 }
 div.title a {
   font-family: inherit;
@@ -109,18 +110,26 @@ h2 {
   text-align: center;
 }
 
+.quotes {
+  padding-top: 40px;
+}
 .quotes h2 {
   width: 49%;
   display: inline-block;
 }
 .quotes div {
-  width: 49.5%;
+  text-align: right;
   display: inline-block;
 }
 
 .welcome {
   font-size: 50px;
   text-align: center;
+}
+
+img.photo {
+  width: 70%;
+  height: 70%;
 }
 
 a {
