--- a/Alison/scss/screen.scss
+++ b/Alison/scss/screen.scss
@@ -55,15 +55,31 @@ h2 {
   h2 {
     width: 49%;
     display: inline-block;
+    font-size:40px;
+    line-height: 1.5em;
   }
   div {
     text-align: right;
     display: inline-block;
+    height: 300px;
+  }
+  .kelley {
+  font-size: 30px;
   }
 }
 .welcome {
-  font-size: 50px;
+  width: 1000px;
+  height: 570px;
+  font-size: 0px;
   text-align: center;
+  display: block;
+  .pic1 {
+    width: 41%;
+    height: 100%;
+  }
+  .pic2 {
+    height: 400px;
+  }
 }
 img.photo {
   width: 70%;
