--- a/Alison/scss/screen.scss
+++ b/Alison/scss/screen.scss
@@ -89,7 +89,16 @@ img.photo {
 a {
   color: #800000;
 }
-
+.puns {
+  h2 {
+    font-size: 30px;
+    line-height: 1.5em;
+  }
+  img {
+    width: inherit;
+    height: 400px;
+  }
+}
 p {
   margin-bottom: 1.1em;
 }
